# OS_LAB

./: README.md
cp/: CMakeLists.txt  report.docx
cp/include/: include.h  msg_q.h
cp/src/: a.c  b.c  c.c  msg_q.c
kp/: CMakeLists.txt
lab1/: CMakeLists.txt  report.docx
lab1/include/: main.h
lab1/src/: child1.c  child2.c  workWithFile.c
lab2/: CMakeLists.txt  in2.txt  report.docx  ~$report.docx
lab2/include/: include.h  workWithFile.h
lab2/src/: child.c  child1.c  child2.c  main.c  workWithFile.c
lab3/: CMakeLists.txt  report.docx
lab3/include/: include.h  main.h
lab3/src/: main.c
lab4/: CMakeLists.txt  in1.txt  in2.txt  out.txt  report.docx
lab4/include/: include.h  main.h  work_with_event.h  work_with_file.h
lab4/src/: child.c  child1.c  child2.c  main.c  work_with_event.c  work_with_file.c
lab5/: CMakeLists.txt  MakeFile  report.docx
lab5/include/: include.h  lib.h
lab5/src/: lib1.c  lib2.c  main_dy.c  main_st.c
lab6-8/: CMakeLists.txt  CMakeSettings.json  report.docx  vcpkg.json
lab6-8/include/: child.h  include.h  main.h  msg_q.h  orchestra.h  parent.h  test_tree.h  tree.h
lab6-8/src/: child.c  main.c  msg_q.c  orchestra.c  parent.c  test_tree.c  tree.c
